--- a/comments/static/comments/css/comments.css
+++ b/comments/static/comments/css/comments.css
@@ -37,6 +37,8 @@
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-weight: 600;
 	font-size: 12px;
+	display: inline-block;
+	width: 90px;
 	color: rgb(75, 75, 75);
 }
 
@@ -54,6 +56,7 @@
 
 .comments-body .show-replies{
 	width: 90px;
+	text-align: left;
 }
 
 .comments-body .reply-button:focus, .show-replies:focus, .edit-button:focus, .delete-button:focus {
