--- a/my_newsapp/static/my_newsapp/style.css
+++ b/my_newsapp/static/my_newsapp/style.css
@@ -27,8 +27,6 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
   text-decoration: none;
 }
 
-
-
 .padding-bottom-30 {
   padding-bottom: 30px;
 }
@@ -103,7 +101,7 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
    is visible - and for hiding horizontal overflow, aside adding this class to article, we must set
    left and right margin in .article class, as then horizontal overflow is hidden, while if we set
    padding instead margin, it is still visible */
-.carousel-wrap {
+.article-wrap {
   overflow: hidden !important;
 }
 
@@ -121,8 +119,8 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
 }
 
 .article {
-  margin-right: 300px;
-  margin-left: 300px;
+  /* margin-right: 300px;
+  margin-left: 300px; */
   text-align: justify;
   line-height: 1.7;
   padding-top: 45px;
@@ -130,13 +128,14 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
 }
 
 .comments {
-  margin-right: 300px;
-  margin-left: 300px;
+  /* margin-right: 300px;
+  margin-left: 300px; */
 }
 
 .article pre, .article a {
   color: rgb(144, 77, 25);
   font-weight: 600;
+  margin: auto;
 }
 
 .article a:hover {
@@ -175,8 +174,6 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
   text-decoration: none;
 }
 
-
-
 .login-buttons {
   text-align: right;
 }
@@ -185,13 +182,13 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
 
 /* Hides ugly html input type="file" element, but keeps it visible for browser.
    Label with for="<id_of_the_file_input_element>" is used instead */
- input[type='file'] {
+input[type='file'] {
   width: 0.1px;
-	height: 0.1px;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
-	z-index: -1;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
 }
 
 .position-bottom {
@@ -209,10 +206,26 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
 } 
 
 /* ---------------------- Bootstrap override ---------------------- */
+.custom-nav {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
 
-.navbar-nav > li{
-  margin-left:30px;
-  margin-right:30px;
+.custom-nav .nav-link {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.navbar-nav {
+  display: flex !important;
+  justify-content: space-around !important;
+}
+
+.dropdown-toggle {
+  outline: none;
 }
 
 .dropdown-menu {
@@ -243,7 +256,6 @@ h3 a:hover, h4 a:hover, h5 a:hover, p a:hover  {
 .dropdown-menu li:hover > ul.dropdown-menu {
   display: block;
 }
-
 
 .dropdown-submenu {
   position:relative;
