--- a/my_newsapp/templates/my_newsapp/detail.html
+++ b/my_newsapp/templates/my_newsapp/detail.html
@@ -106,6 +106,7 @@
   </div> <!-- container end -->
 
   <div class="container comments">
+    <hr class="mt-4 mb-4">
     {% include 'comments/base.html' %}
   </div>
   
