--- a/my_newsapp/templates/my_newsapp/detail.html
+++ b/my_newsapp/templates/my_newsapp/detail.html
@@ -110,6 +110,7 @@
         <h5>Attachments:</h5>
         {% for file in article.files.all  %}
           <a href="">{{ file }}</a>
+          <p>{{ file.get_file_url }}</p>
         {% endfor %}
       </div> <!-- attachments end -->
     {% endif %}
