--- a/my_newsapp/templates/my_newsapp/detail.html
+++ b/my_newsapp/templates/my_newsapp/detail.html
@@ -107,10 +107,10 @@
 
     {% if article.files.all %}
       <div class="file-attachments mt-3"> <!-- attachments start -->
-        <h5>Attachments:</h5>
+        <h5 class="mb-3">Attachments:</h5>
         {% for file in article.files.all  %}
-          <a href="{{ file.get_absolute_url }}">{{ file }}</a>
-          
+          <!-- ?{{ file.article.slug }}-{{ file.name }}/ sam dodao da imam infu u url-u koji file i od kojeg article-a se skida -->
+          <p><a href="{% url 'my_newsapp:file-download' id=file.id %}?{{ file.article.slug }}-{{ file.name }}/">{{ file }}</a></p> 
         {% endfor %}
       </div> <!-- attachments end -->
     {% endif %}
